syntax = "proto3";

option go_package = "../../../pkg/auth-client/api/hello;hello";



package hello;

service Hello {
    rpc Ping (HelloRequest) returns (BaseResponse) {}
}

message HelloRequest {
  string Msg = 1;
}

message BaseResponse {
  int32 Code = 1;
  string Msg = 2;
}
